# open-deep-researcher

./: .env.example  .gitignore  Dockerfile  README.md  README_ja.md  compose.yml  langgraph.json  pyproject.toml
backend/: .env.example  Dockerfile  README.md  create_admin.py  requirements.txt
backend/app/: config.py  main.py
backend/app/api/endpoints/: auth.py  diagnostics.py  documents.py  feedback.py  research.py  users.py
backend/app/core/: document_manager.py  research_manager.py  user_manager.py
backend/app/db/: base.py  models.py
backend/app/models/: document.py  research.py  user.py
backend/app/services/: research_service.py
backend/app/utils/: helpers.py
examples/: full_text_search.ipynb  graph.ipynb  local_document.ipynb  patent_search.ipynb
examples/docs/: llm.txt
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/guide/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/new-research/: page.tsx
frontend/src/app/research/[id]/: detail-client.tsx  page.tsx
frontend/src/app/research/[id]/feedback/: feedback-client.tsx  page.tsx
frontend/src/app/research/[id]/research/: page.tsx
frontend/src/app/research/[id]/result/: page.tsx  result-client.tsx
frontend/src/components/: protected-route.tsx
frontend/src/components/auth/: login-form.tsx
frontend/src/components/documents/: file-list.tsx  file-upload.tsx
frontend/src/components/forms/: feedback-form.tsx  research-form.tsx
frontend/src/components/layout/: header.tsx  main-nav.tsx
frontend/src/components/research/: report-viewer.tsx  research-card.tsx  section-list.tsx  status-badge.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  dropdown-menu.tsx  table.tsx
frontend/src/hooks/: use-feedback.ts  use-research.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/services/: document-service.ts  feedback-service.ts  research-service.ts  user-service.ts
frontend/src/store/: auth-store.ts  research-store.ts
frontend/src/types/: api.ts
open_deep_researcher/: __init__.py  configuration.py  graph.py  prompts.py  state.py  utils.py
open_deep_researcher/retriever/: hybrid.py  local.py  patent.py  utils.py  web.py
open_deep_researcher/retriever/local/: full_text_search.py  vector_search.py
