[project]
name = "open-deep-researcher"
version = "0.0.1"
description = "Planning, research, and report generation."

readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.3",
    "exa-py>=1.8.9",
    "langchain-anthropic>=0.3.9",
    "langchain-community>=0.3.19",
    "langchain-groq>=0.2.5",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "linkup-sdk>=0.2.3",
    "openai>=1.65.4",
    "pymupdf>=1.25.3",
    "tavily-python>=0.5.1",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.75",
    "mypy>=1.15.0",
    "ruff>=0.9.10",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["open_deep_researcher"]

[tool.setuptools.package-dir]
"open_deep_researcher" = "open_deep_researcher"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 120
# https://docs.astral.sh/ruff/rules/
lint.select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    # "D", # pydocstyle
    "B", # flakes8-bugbear
    "UP", # pyupgrade
    "N", # pep8-naming
    "C90", # mccabe
]
lint.fixable =["ALL"]
lint.unfixable = [
    "F401",  # module imported but unused
    "F841",  # local variable is assigned to but never used
]
lint.ignore = [
    "E501",  # line too long
    "E402",  # module level import not at top of file
    "N806",  # variable in function should be lowercase
    "N803",  # argument name should be lowercase
]
